2009-03-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/pdbformat.cpp: Corrected patch from Pierre-Louis to
	ensure 80-character CONECT records.

2009-03-22  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp: Added some extra logic to SMILES writer
	for cis/trans bonds. Fixes a number of stereochemistry inversions.

2009-03-22  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp: Rewrote the SMILES parsing code to set
	entries in atom4refs directly, rather than adding to the end of the
	current atom4refs.

2009-03-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Fix for previous commit on 2009-01-10.
	"ChiralSearch vectors were too small. Should address PR#2498047."
	Only increase size -- don't throw away data with resize() call.

2009-03-19  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp: Canonical smiles were inverting
	the stereochemistry in the case of ring closure bonds on the chiral
	centre. Fixed by changing approach to use original OBChiralData, and 
	parity function as suggested by Tim.

2009-03-17  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp: Canonical smiles were copying the
	Clockwiseness of the original smiles. This was correct 50% of the
	time. Now it works out the correct Clockwiseness based on the
	rearrangement of the groups. Fixes PR#2581919.

2009-03-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/pdbformat.cpp: Patch from Pierre-Louis to fix
	problem with multiple bonds in CONECT records. Fixes PR#2680300.

2009-03-07  Daniel Leidert <daniel.leidert@wgdd.de>

	* include/iconv.h, src/formats/xml/iconv.h, src/strncasecmp.c: Fixed
	FSF address.

2009-03-02  Daniel Leidert <daniel.leidert@wgdd.de>

	* doc/babel.1, doc/obchiral.1, doc/obconformer.1, doc/obenergy.1,
	doc/obfit.1, doc/obgen.1, doc/obgrep.1, doc/obminimize.1,
	doc/obprobe.1, doc/obprop.1, doc/obrotamer.1, doc/obrotate.1,