@@ -163,4 +163,5 @@ add_subdirectory(doc)
 add_subdirectory(src)
 add_subdirectory(test)
 add_subdirectory(tools)
+add_subdirectory(scripts)
 
